--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -63,7 +63,6 @@ body {
     border-bottom:solid .5px #333333;
 }
 .sidebar-form-btn {
-    margin-top: 5px;
     background: none;
     font-family: 'MuseoModerno', cursive;
     color: #c1c1d7;
@@ -113,7 +112,7 @@ body {
     margin-top: 2%;
 }
 
-/* Content Styles */
+/* Navigation Styles */
 .navigation-bar-container {
     display: flex;
     flex-direction: row;
@@ -124,9 +123,25 @@ body {
     padding: 5px;
     width: 20px;
 }
-/* .content-view {
-    border: solid 1px red;
-}*/
-.content h1 {
-    margin-left: 5px;
+/* Tasks Page */
+.tasks-form textarea {
+    margin-top: 5px;
+    background: none;
+    border: solid .4px;
+    display: block;
+    color: white;
+}
+.tasks-form-btn {
+    background: none;
+    font-family: 'MuseoModerno', cursive;
+    color: #c1c1d7;
+    border: none;
+    transition: 700ms ease-in-out;
+}
+.tasks-form-btn:hover {
+    transition: 700ms ease-in-out;
+    color: #72E5BE;
+}
+.my-tasks {
+    margin-top: 5px;
 }
