--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,9 +1,6 @@
 /* Sections */
 body {
     background-color: #00061a;
-    /* background-position: left;
-    background-repeat: no-repeat;
-    background-attachment: fixed; */
     width: 100%;
     height: 100%;
     color: white;
@@ -11,7 +8,7 @@ body {
 .App {
     /* position: relative; */
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     width: 100%;
     height: 100%;
     font-family: 'MuseoModerno', cursive;
@@ -27,17 +24,20 @@ body {
     display: flex;
     justify-content: space-around;
     min-width: 150px;
+    /* min-height: 300px; */
     padding: 5px;
-    border: solid 1px	#333333;
-    border-radius: 2mm;
+    /* border: solid 1px	#333333; */
+    /* border-radius: 2mm; */
 }
 .content-container {
     position: relative;
-    min-width: 200px;
-    width: 40%;
+    min-width: 225px;
+    margin-left: 10px;
+    /* width: 40%; */
 }
 .spacer {
     padding: 5px;
+    /* border: solid 1px white; */
 }
 /* Sidebar Styles */
 .sidebar-content img {
@@ -123,6 +123,56 @@ body {
     padding: 5px;
     width: 20px;
 }
+.zero {
+    position: absolute;
+    font-size: .5rem;
+    right: 0;
+    top: 15px;
+}
+/* Workouts Page */
+.exercises {
+    margin-left: 20px;
+    margin-right: 50px;
+}
+.workouts-view h1 {
+    margin-bottom: 10px;
+}
+.workouts-view h2 {
+    margin-left: 10px;
+    margin-top: 10px;
+    font-size: .8rem;
+}
+.workouts-view table {
+    font-size: .6rem;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+.workouts-view table tr td {
+    padding: 3px;
+}
+.lame {
+    padding: 2px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+.highlighted {
+    padding: 2px;
+    margin-bottom: 5px;
+    color: #ffb3d9;
+    cursor: pointer;
+}
+/* .back:hover {
+    
+}
+.chest:hover {
+    
+}
+.chest:hover {
+    
+}
+.chest:hover {
+    
+} */
 /* Tasks Page */
 .tasks-form textarea {
     margin-top: 5px;
@@ -144,4 +194,21 @@ body {
 }
 .my-tasks {
     margin-top: 5px;
+}
+.line {
+    padding: 5px;
+    border-bottom: solid .5px #ffb3d9;
+    cursor: pointer;
+}
+.remove {
+    background: none;
+    border: solid .4px #ffb3d9;
+    padding: 5px;
+    margin-top: 10px;
+    color: white;
+    border-radius: 2mm;
+}
+.remove:hover {
+    color: rgb(47, 255, 47);
+    transition: 700ms ease-in-out;
 }
