--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -158,7 +158,7 @@ body {
 .highlighted {
     padding: 2px;
     margin-bottom: 5px;
-    color: #ffb3d9;
+    color: #970000;
     cursor: pointer;
 }
 /* .back:hover {
