--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,39 +1,34 @@
 /* Sections */
 body {
     background-color: #00061a;
+    right: 0;
     width: 100%;
     height: 100%;
     color: white;
 }
 .App {
-    /* position: relative; */
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     width: 100%;
     height: 100%;
     font-family: 'MuseoModerno', cursive;
 }
 .sidebar-container {
     position: relative;
-    min-width: 160px;
-    /* width: 35%; */
+    width: 160px;
 }
 .main-container {
     position: relative;
     margin-top: 10px;
     display: flex;
     justify-content: space-around;
-    min-width: 150px;
-    /* min-height: 300px; */
+    width: 150px;
     padding: 5px;
-    /* border: solid 1px	#333333; */
-    /* border-radius: 2mm; */
 }
 .content-container {
     position: relative;
-    min-width: 225px;
+    width: 225px;
     margin-left: 10px;
-    /* width: 40%; */
 }
 .spacer {
     padding: 5px;
@@ -109,7 +104,7 @@ body {
 .main-content ul li {
     display: block;
     margin: 0 auto;
-    margin-top: 2%;
+    margin-top: 15px;
 }
 
 /* Navigation Styles */
@@ -136,6 +131,7 @@ body {
 }
 .workouts-view h1 {
     margin-bottom: 10px;
+    cursor: pointer;
 }
 .workouts-view h2 {
     margin-left: 10px;
@@ -195,6 +191,9 @@ body {
 .my-tasks {
     margin-top: 5px;
 }
+.my-tasks-container h1 {
+    cursor: pointer;
+}
 .line {
     padding: 5px;
     border-bottom: solid .5px #ffb3d9;
@@ -205,10 +204,29 @@ body {
     border: solid .4px #ffb3d9;
     padding: 5px;
     margin-top: 10px;
-    color: white;
+    color: #c1c1d7;
     border-radius: 2mm;
 }
 .remove:hover {
-    color: rgb(47, 255, 47);
+    color: rgb(20, 151, 20);
     transition: 700ms ease-in-out;
+}
+.clear {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    z-index: 100;
+    background-color: #00061a;
+    padding: 20px;
+    margin-top: -15px;
+    border: solid 2px white;
+}
+.choice {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+}
+.choice span {
+    margin-top: 5px;
+    cursor: pointer;
 }
